<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_weather">

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.dev777popov.whatsonbaby.ui.activities.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_wardrobe"
        android:name="com.dev777popov.whatsonbaby.ui.activities.ui.cupboard.WardRobeFragment"
        android:label="@string/title_wardrobe"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_lifehack"
        android:name="com.dev777popov.whatsonbaby.ui.activities.ui.lifehack.LifeHackFragment"
        android:label="@string/title_lifehack"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dev777popov.whatsonbaby.ui.activities.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>