<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.fragments.pagersFr.PagerFragment1">

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:gravity="center"
        android:text="@string/text_pager3_title1"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/text_pager3_title2"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textTitle1"
        app:layout_constraintStart_toStartOf="@+id/textTitle1"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textNameMom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="106dp"
        android:hint="@string/text_pager3_hint1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNameMomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_pager3_title2"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textTitle1"
        app:layout_constraintStart_toStartOf="@+id/textTitle1"
        app:layout_constraintTop_toBottomOf="@+id/textNameMom" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textNameChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="106dp"
        android:hint="@string/text_pager3_hint2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNameChildText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_page1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@drawable/image_pager3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textTitle2"
        app:layout_constraintStart_toStartOf="@+id/textTitle2" />

</androidx.constraintlayout.widget.ConstraintLayout>