<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.fragments.pagersFr.PagerFragment1">

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:gravity="center"
        android:text="@string/text_pager4_title1"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:gravity="center"
        android:text="@string/text_pager4_title2"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDateBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:layout_marginEnd="106dp"
        android:hint="@string/text_pager4_hint1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textDateChild"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/text_pager4_title3"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textTitle1"
        app:layout_constraintStart_toStartOf="@+id/textTitle1"
        app:layout_constraintTop_toBottomOf="@+id/textDateBirthday" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textDateBirthday"
        app:layout_constraintStart_toStartOf="@+id/textDateBirthday"
        app:layout_constraintTop_toBottomOf="@+id/textTitle2">

        <ImageView
            android:id="@+id/imageMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="51dp"
            android:src="@drawable/ic_male" />

        <ImageView
            android:id="@+id/imageFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_female" />

    </LinearLayout>


    <ImageView
        android:id="@+id/image_page4"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/image_pager4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textTitle2"
        app:layout_constraintStart_toStartOf="@+id/textTitle2" />

</androidx.constraintlayout.widget.ConstraintLayout>